# openapi/openapi.yaml
@@ -3,7 +3,7 @@ info:
   title: Subscriptions API
   version: "1.0"
 servers:
-  - url: http://localhost:8088
+  - url: http://localhost:8080
 paths:
   /api/v1/subscriptions:
     get:
@@ -70,7 +70,7 @@ paths:
       responses:
         '204': { description: No Content }
         '404': { description: Not found }
-  /api/v1/cost:
+  /api/v1/subscriptions/cost:
     get:
       summary: Sum of subscription cost for period (inclusive months)
       parameters:
